Use streamInstances for filtering JSON types